@@ -10,17 +10,61 @@ package git.snippets.jdk13;
  * @since 13
  */
 public class BlockTest {
-//    public static void main(String[] args) {
-//        blockTest();
-//    }
-//
-//    private static void blockTest() {
+    // 在IDEA下运行，需要启用--enable-preview功能
+    // 或者直接使用JDK 15 运行
+    public static void main(String[] args) {
 //        String content2 = """
-//                {
-//                    1:"Hello",
-//                    2:"World"
-//                }
-//                """;
-//        System.out.println(content2);
+//        {
+//        "upperSummary": null,
+//        "sensitiveTypeList": null,
+//        "gmtModified": "2011-08-05 10:50:09",
+//        "lowerGraph": null,
+//        "signature": "",
+//        "appName": "xxx",
+//        "lowerSummary": null,
+//        "gmtCreate": "2011-08-05 10:50:09",
+//        "type": "CALL",
+//        "name": "xxxx",
+//        "subType": "yyy",
+//        "id": 1,
+//        "projectId": 1,
+//        "status": 1
 //    }
+//                 """;
+//
+//
+//        String content = "{\n"
+//                + "    \"upperSummary\": null,\n"
+//                + "    \"sensitiveTypeList\": null,\n"
+//                + "    \"gmtModified\": \"2011-08-05 10:50:09\",\n"
+//                + "    \"lowerGraph\": null,\n"
+//                + "    \"signature\": \"\",\n"
+//                + "    \"appName\": \"xxx\",\n"
+//                + "    \"lowerSummary\": null,\n"
+//                + "    \"gmtCreate\": \"2011-08-05 10:50:09\",\n"
+//                + "    \"type\": \"CALL\",\n"
+//                + "    \"name\": \"xxxx\",\n"
+//                + "    \"subType\": \"yyy\",\n"
+//                + "    \"id\": 1,\n"
+//                + "    \"projectId\": 1,\n"
+//                + "    \"status\": 1\n"
+//                + "}";
+//        System.out.println(content);
+//        System.out.println(content2);
+//        // 旧方式
+//        final String sql =
+//                "SELECT id, firstName, lastName FROM Employee\n"
+//                        + "WHERE departmentId = \"IT\"\n"
+//                        + "ORDER BY lastName, firstName";
+//        System.out.println(sql);
+//        // 新方式
+//        final String sqlNew = """
+//                SELECT id, firstName, lastName FROM Employee
+//                WHERE departmentId = "IT"
+//                ORDER BY lastName, firstName""";
+//        System.out.println(sqlNew);
+    }
+
+
+
 }
