@@ -4,12 +4,15 @@ package git.snippets.jdk13;
  * switch yield功能
  * jdk13 实验性功能
  * 到jdk14 正式使用
+ *
  * @author <a href="mailto:410486047@qq.com">Grey</a>
  * @date 2021/11/29
  * @since 13
  */
 public class SwitchYield {
-//    public static void main(String[] args) {
+    // 在IDEA下运行，需要启用--enable-preview功能
+    // 或者直接使用JDK 14 运行
+    public static void main(String[] args) {
 //        String t = test("apple");
 //        System.out.println(t);
 //        String m = test("abc");
@@ -25,6 +28,5 @@ public class SwitchYield {
 //            default:
 //                yield "无法识别";
 //        };
-//    }
-
+    }
 }
